--- a/blog/blog/templates/base.html
+++ b/blog/blog/templates/base.html
@@ -14,10 +14,26 @@
             <li class="nav-item active">
                 <a class="nav-link" href ="{ % url 'index' % }"> Home </a>
             </li>
+            {% if user.is_authenticated %}
+            <li class="nav-item ">
+                <a class="nav-link" href ="{% url 'login:logout' %}"> Logout </a>
+                </li>
+                {% else %}
+                <li class="nav-item ">
+                <a class="nav-link" href ="{ % url 'login:signup' % }"> SignUp </a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href ="{ % url 'login:login' % }"> Login </a>
+                    </li>
+                   {% endif %}
+            
         </ul>
     </nav>
- {% block body_block %}
- {% endblock %}
+   <div class="'container" style="padding-top:25px">
+    {% block body_block %}
+
+     {% endblock %}
+</div>
 </body>
 </html>
 
